# pet_album_project

./: README.MD
BackEnd/app/: alembic.ini  main.py  pyproject.toml
BackEnd/app/core/: config.py
BackEnd/app/crud/: crud_user.py
BackEnd/app/db/: db.py
BackEnd/app/migrations/: env.py
BackEnd/app/migrations/versions/: de0d4cb6cac4_create_tables.py
BackEnd/app/models/: model.py
BackEnd/app/routers/: auth_route.py  pet_route.py
BackEnd/app/schemas/: pet_schema.py  user_schema.py
BackEnd/app/utils/: authentication.py
FrontEnd/pet-album/: package-lock.json  package.json
FrontEnd/pet-album/src/: Addpet.js  App.js  Auth.js  Dashboard.js  Home.js  Login.js  Narbar.js  Register.js  api.js
